cmake_minimum_required(VERSION 3.5)
project(vector)
set(PROJECT_NAME_STR vector)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory(lab1_1.1)
add_subdirectory(lab1_1.2)
add_subdirectory(lab1_1.3)
add_subdirectory(lab1_1.4)
add_subdirectory(lab1_1.5)
add_subdirectory(extra)
add_subdirectory(tests)
